@@ -8,17 +8,18 @@ Common Lisp.
 
 1. [Contributors](CONTRIB.md)
 2. [Build and install](#build-and-install)
-3. [Introduction to Lisp](doc/intro-to-lisp.md)
-4. [Starting a Project](doc/starting-a-project.md)
-5. [Syntax](doc/syntax.md)
-6. [Class](doc/class.md)
-7. [Porting from PHP](doc/porting-from-php.md)
-8. [Compiler](doc/compiler.md)
-9. [Compiler source docs](environment/transpiler/README.md)
-10. [Environment](environment/README.md)
-11. [Modules](modules/README.md)
-12. [Stuff using tré](doc/stuff-using-tré.md)
-13. [Wishlist](WISHLIST.md)
+3. [FAQ – Frequently Asked Questions](doc/FAQ.md)
+4. [Introduction to Lisp](doc/intro-to-lisp.md)
+5. [Starting a Project](doc/starting-a-project.md)
+6. [Syntax](doc/syntax.md)
+7. [Class](doc/class.md)
+8. [Porting from PHP](doc/porting-from-php.md)
+9. [Compiler](doc/compiler.md)
+10. [Compiler source docs](environment/transpiler/README.md)
+11. [Environment](environment/README.md)
+12. [Modules](modules/README.md)
+13. [Stuff using tré](doc/stuff-using-tré.md)
+14. [Wishlist](WISHLIST.md)
 
 <a id="build-and-install"></a>
 # Build and install
