@@ -1,0 +1,8 @@
+Frequently Asked Questions
+==========================
+
+* **Is tré a macro set over Common LISP/SBCL?** No.  tré is sitting on
+  top of SBCL 
+
+* **How can I access the command-line arguments?** \*ARGV\* holds a list
+  of strings.  On Common LISP target only.
